--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-bolt"></i></a>
+          <a class="navbar-brand" href="#">
+          	<!--<i class="fa fa-bolt"></i>-->
+          	<img src="assets/img/amera logo.png" alt="Amera Logo" style="height:55px">
+          </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -54,7 +57,7 @@
 	    	<div class="row">
 	    		<div class="col-lg-8 col-lg-offset-2 centered">
 	    			<h1>Amera</h1>
-	    			<h2>MOBILE DEVELOPER </h2>
+	    			<h2>MOBILE DEVELOPER</h2>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container -->
@@ -69,8 +72,8 @@
 					</div>
 				
 					<div class="col-lg-7 centered">
-					  <h3>WHAT WE DO?</h3>
-					  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					  <h3>WHAT WE ARE?</h3>
+					  <p>Amera is an indie interactive company for mobile platform based in Malang, Indonesia. We aim to create games that is enjoyable by people all around the world.</p>
 					</div>
                 </div>
 			</div>
@@ -111,7 +114,7 @@
 			</div>
 			
 			<div class="col-lg-3 mt">
-				<p><button type="button" class="btn btn-theme btn-lg">Email Us!</button></p>
+				<p><button type="button" class="btn btn-theme btn-lg" onClick="mailto:david23zack@gmail.com">Email Us!</button></p>
 			</div>
 		</div>
 	</div>
@@ -120,7 +123,7 @@
 	<div id="download">
 		<div class="container">
 			<div class="row centered">
-			  <h3>Download at</h3>
+			  <h3>Available at</h3>
 			  <div class="col-lg-4 mt centered">
 				<!--<canvas id="appstore" height="130" width="130"></canvas>-->
                 <img src="assets/img/AppStore.png" alt="" height="130" width="130">
