--- a/privacy.html
+++ b/privacy.html
@@ -38,7 +38,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-bolt"></i></a>
+          <a class="navbar-brand" href="#">
+          	<!--<i class="fa fa-bolt"></i>-->
+          	<img src="assets/img/amera logo.png" alt="Amera Logo" style="height:55px">
+          </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -52,9 +55,9 @@
 	<div id="hello">
 	    <div class="container">
 	    	<div class="row">
-	    		<div class="col-lg-8 col-lg-offset-2 centered">
-	    			<h1>Amera</h1>
-	    			<h2>Privacy </h2>
+	    		<div class="col-lg-8 col-lg-offset-2 mt centered">
+	    			<!--<h1>Amera</h1>-->
+	    			<privacy>Privacy Policy</privacy>
 	    		</div><!-- /col-lg-8 -->
 	    	</div><!-- /row -->
 	    </div> <!-- /container -->
@@ -64,63 +67,96 @@
 		<div class="container">
 			<div class="row">
             	<div class="topmargin">
-					<div class="col-lg-5 centered">
-						<img src="assets/img/iphone.png" alt="">
-					</div>
-				
 					<div class="col-lg-7 centered">
-					  <h3>WHAT WE DO?</h3>
-					  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					  <h1>YOUR PRIVACY IS IMPORTANT TO US.</h1>
 					</div>
+                    <p2>Updated on: October 20th 2017</p2>
+                    <br /><br />
+                    <p2>Amera (“Amera”, "us", "our" or "we") is dedicated to protecting the privacy rights of our users ("users" or "you").  This Privacy Policy (this "Policy") describes the ways we collect, store, use, and manage the information, including personal information, and data that you provide or we collect in connection with any Amera game provided on a mobile platform (for example, iOS and Android) (collectively, the "Service(s)").  Please note that the scope of this Policy is limited to information and data collected or received by Amera through your use of the Service.  Amera is not responsible for the actions of third party people or companies, the content of their sites, the use of information or data you provide to them, or any products or services they may offer.  Any link to those sites does not constitute our sponsorship of, or affiliation with, those people or companies.</p2>
+                    <br /><br />
+                    <p2>By using the Service, you are expressing your agreement to this Policy and the processing of your information and data, including your personal information, in the manner provided in this Policy.  If you do not agree to these terms, please do not use the Service.</p2>
+                    <br /><br />
+                    <p2>If you have any questions or concerns, please contact us with the information provided in the Contact Information of Data Controller section of this Policy.</p2>
+                    <br /><br />
+                    <p1><strong>Information and Data We Collect from You</strong></p1>
+                    <br><br>
+                    <p2>We may collect the following information and data from you:
+                    <ul type="disc">
+                    	<li>Contact information (such as name and email address)</li>
+                        <li>Profile information that you volunteer (such as profile photo, gender, age or birthday, links to profiles on other social networking websites)</li>
+                        <li>Automatically collected data (such as IP Address, your device's operating system, browser type and language)</li>
+                        <li>Mobile device identifiers (such as your unique device ID (persistent/non-persistent, hardware type, medial access control ("MAC") address, international mobile equipment identity ("IMEI"), and your device name</li>
+                        <li>General location information for the purpose of providing you with the correct version of the application</li>
+                        <li>Game data (such as your interactions with the game and with the other players inside the game via server log files, your player ID)</li>
+                    </ul>
+                    </p2><br>
+                    <p2>Other Collection Practices</p2>
+                    <br><br>
+                    <p2>The Sites include Social Media Features, such as the Facebook Like button and Widgets, such as the Share this button. These Features may collect your IP address, which page you are visiting on our Sites, and may set a cookie to enable the Feature to function properly. Social Media Features and Widgets are either hosted by a third party or hosted directly on our Sites. Your interactions with these Features are governed by the privacy policy of the company providing it.</p2><br><br>
+                    <p2>Amera may offer you the opportunity to invite your contacts from a Social Network Service (such as your Facebook friends) so that those contacts can be located in Amera games and/or you can invite them to join you in Amera games.  Such contact information will be used only for the purpose of sending communications to the addressee.  You or the third party may contact us to request the removal of this information from our database to the extent Amera stores any of this information.</p2><br><br>
+                    <p1>How We Use Your Information</p1><br><br>
+                    <p2>Amera’s primary goals in using information are to provide Services to you, improve our Service, conduct marketing and research and create reports for internal use.</p2><br>
+                    <p2>We use information collected through our Service for purposes described in this Policy or disclosed to you in connection with our Service. For example, we may use your information to:</p2><br>
+                    <p2>
+                    	<ul type="disc">
+                        	<li>Identify and suggest connections with other Amera users;</li>
+                            <li>Operate and improve our Service;</li>
+                            <li>Understand you and your preferences to enhance your experience and enjoyment using our Service;</li>
+                            <li>Respond to your comments and questions and provide customer service;</li>
+                            <li>Provide and deliver products and services you request;</li>
+                            <li>Deliver advertising and marketing and promotional information to you;</li>
+                            <li>Enable you to communicate with other users; and</li>
+                            <li>Link or combine it with other information we get from third parties, to help understand your preferences and provide you with better services.</li>
+                        </ul>
+                    </p2><br>
+                    <p2>Third Party Services</p2><br><br>
+                    <p2>Our Services may contain third party tracking and data collection and analytics tools from our service providers, examples of which include Google Analytics and MobileAppTracking by Tune. Such third parties may use cookies, APIs, and SDKs in our Services to enable them to collect and analyze user and device related data and information on our behalf. The third parties may have access to and collect data and information about you, such as your device identifier, MAC address, IMEI, locale (specific location where a given language is spoken), geo-location information, IP address, application usage, access and session times, applications present on the device or in use at a particular time on the device, and your viewing of and interactions with advertising, for the purpose of providing their services, including, for example, enabling, providing and delivering advertising as described in further detail below..<br><br>
+The privacy policies of our service providers may include additional terms and disclosures regarding their data collection and use practices and tracking technologies, and we encourage you to check those privacy policies to learn more about their data collection and use practices, use of cookies and other similar tracking technologies.</p2><br><br>
+					<p1>Mobile Applications</p1>
+                    <br><br>
+                    <p2>When you use any of the Amera games or applications on a mobile platform, we may record certain information and data, such as your application usage, access, session times and in-app purchases, your unique device ID (persistent / non-persistent), hardware type, media access control ("MAC") address, the version of your operating system ("OS"), your device name, your email address (if you have connected to Facebook or Google+), and your location (based on your Internet Protocol ("IP") address).  This information is useful to us for troubleshooting and helps us understand usage trends and improve and optimize the Services and your user experience, and may also be utilized for other purposes, such as interest based advertising as described elsewhere in this Policy.</p2>
+                    <br><br>
+                    <p2>We may occasionally send you push notifications through our mobile applications to send you game updates, high scores and other service related notifications that may be of importance to you.  You may at any time opt-out from receiving these types of communications by turning them off at the device level through your settings.</p2>
+                    <br><br>
+                    <p1>Advertising</p1>
+                    <br><br>
+                    <p2>We may feature advertisements in our games and elsewhere, both ourselves and with the help of our partners, and collect and use data and information about you and your device (including the presence of applications on the device or in use at a particular time on the device) in connection with such advertising, including your viewing of and interaction with any such advertising, in order to deliver, enable, target and optimize advertising and promotional information that is more relevant to you and is based on your game and device usage, online behavior and interests (this is commonly referred to as online behavioral or interest based advertising). Our partners may also use cookies or similar tracking technologies to track the content you access or your device location for purposes of interest based advertising. The privacy policies of our partners may include additional terms and disclosures regarding  their data collection and use practices and tracking technologies , and we encourage you to check those privacy policies to learn more about their data collection and use practices, use of cookies and other similar tracking technologies.</p2>
+                    <br><br>
+                    <p2>Advertisers on mobile devices and our third party advertising and analytics partners sometimes collect and use Advertising IDs to enable and optimize advertising. Advertising IDs are non-permanent device identifiers such as the Android advertising ID and/or Apple's ID for advertising.</p2>
+                    <br><br>
+                    <p2>These advertisers and third party advertising and analytics partners may collect and use data and information about you, such as your Service session activity, viewing of and interaction with an advertisement, device identifier, MAC address, IMEI, geo-location information and IP address for the purposes of analyzing, tracking and measuring advertisement performance and to provide interest based advertising.</p2>
+                    <br><br>
+                    <p1>How We May Disclose Your Information to Third Parties</p1>
+                    <br><br>
+                    <p2>Amera does not share your personal information except as approved by you or as described below:<br>
+                    <ul type="disc">
+                    	<li>Amera may engage other companies and individuals to perform services on our behalf.  Example of these services include analyzing data and providing customer support.  These agents and service providers may have access to your personal information in connection with the performance of services for Amera.</li>
+                        <li>We may release your information as permitted by law, such as to comply with a subpoena, or when we believe that release is appropriate to comply with the law; investigate fraud, respond to a government request, enforce or apply our rights; or protect the rights, property, or safety of us or our users, or others.  This includes exchanging information with other companies and organizations for fraud protection. In certain situations, Amera may be required to disclose personal information in response to lawful requests by public authorities or for local law enforcement requirements.</li>
+                        <li>Amera may share your information in connection with any merger, sale of our assets, or a financing or acquisition of all or a portion of our business to another company.  You will be notified via email and/or notice on our Sites of any change in ownership or users of your personal information.</li>
+                        <li>We may share aggregate or anonymous information about you with advertisers, publishers, business partners, sponsors, and other third parties.</li>
+                    </ul></p2>
+                    <br>
+                    <p1>Our Policy Regarding Children</p1>
+                    <br><br>
+                    <p2>We do not knowingly collect or solicit personal information from or direct or target interest based advertising to anyone under the age of 13.  If you are under 13, please do not send any information about yourself to us, including your name, address, telephone number, or email address.  No one under the age of 13 may provide any personal information.  In the event that we learn that we have collected personal information from a child under age 13, we will delete that information as quickly as possible.  If you believe that we might have any information from or about a child under the age of 13, please contact us.</p2>
+                    <br><br>
+                    <p1>Changes to This Policy</p1><br><br>
+                    <p2>We may update this Policy to reflect changes to our data and information privacy practices. If we make any material changes we will notify you by email or by means of a notice on this Site prior to the change becoming effective. We encourage you to periodically review this page for the latest information on our privacy practices.</p2><br><br>
+                    <p1>Contact Information of Data Controller</p1><br><br>
+                    <address><p2>
+                    	Amera™<br>
+                        Malang, East Java, Indonesia.<br>
+                        Email <a href="mailto:david23zack@gmail.com"><p2>david23zack@gmail.com</p2></a>
+                    </p2></address>
                 </div>
 			</div>
 		</div>
 	</div>
 	
-	<div class="container">
-		<div class="row centered mt grid">
-		  <h3>OUR APPS</h3>
-		  <div class="mt"></div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/001.jpg" alt=""></a>
-			</div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/002.jpg" alt=""></a>
-			</div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/003.jpg" alt=""></a>
-			</div>
-		</div>
-		
-		<div class="row centered mt grid">
-			<div class="mt"></div>		
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/004.jpg" alt=""></a>
-			</div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/005.jpg" alt=""></a>
-			</div>
-			<div class="col-lg-4">
-				<a href="#"><img src="assets/img/006.jpg" alt=""></a>
-			</div>
-		</div>
-		
-		<div class="row mt centered">
-			<div class="col-lg-7 col-lg-offset-1 mt">
-					<p class="lead">Amera is an interactive entertainment company for the mobile world based in Indonesia, with people around the world playing our games. It is simply a joy to know that our games entertains you.</p>
-			</div>
-			
-			<div class="col-lg-3 mt">
-				<p><button type="button" class="btn btn-theme btn-lg">Email Us!</button></p>
-			</div>
-		</div>
-	</div>
-
-
 	<div id="download">
 		<div class="container">
 			<div class="row centered">
-			  <h3>Download at</h3>
+			  <h3>Available at</h3>
 			  <div class="col-lg-4 mt centered">
 				<!--<canvas id="appstore" height="130" width="130"></canvas>-->
                 <img src="assets/img/AppStore.png" alt="" height="130" width="130">
@@ -225,9 +261,6 @@
 
 	<div id="f">
 		<div class="container">
-        	<div class="row centered">
-	            <privacy><a href="#">Privacy Policy</a></privacy>
-            </div>
 			<div class="row centered">
 				<credits>2017 Amera™ Co. Amera™, the Amera lion logo, the game names and related marks are trade marks of Amera Ltd or related entities. All rights reserved</credits>
           </div>
