--- a/privacy.html
+++ b/privacy.html
@@ -51,9 +51,10 @@
       </div>
     </div>
 
-	<div class="container_bg"></div>
-	<div id="hello">
-	    <div class="container">
+	
+    <div id="hello">
+    	<div class="container_bg2"></div>
+    	<div class="container_privacy">
 	    	<div class="row">
 	    		<div class="col-lg-8 col-lg-offset-2 mt centered">
 	    			<!--<h1>Amera</h1>-->
@@ -64,14 +65,14 @@
 	</div><!-- /hello -->
 	
 	<div id="green">
-		<div class="container">
+		<div class="container mt">
 			<div class="row">
             	<div class="topmargin">
-					<div class="col-lg-7 centered">
+					<div class="col-lg-12 centered">
 					  <h1>YOUR PRIVACY IS IMPORTANT TO US.</h1>
-					</div>
+					</div><br><br>
                     <p2>Updated on: October 20th 2017</p2>
-                    <br /><br />
+                    <br><br>
                     <p2>Amera (“Amera”, "us", "our" or "we") is dedicated to protecting the privacy rights of our users ("users" or "you").  This Privacy Policy (this "Policy") describes the ways we collect, store, use, and manage the information, including personal information, and data that you provide or we collect in connection with any Amera game provided on a mobile platform (for example, iOS and Android) (collectively, the "Service(s)").  Please note that the scope of this Policy is limited to information and data collected or received by Amera through your use of the Service.  Amera is not responsible for the actions of third party people or companies, the content of their sites, the use of information or data you provide to them, or any products or services they may offer.  Any link to those sites does not constitute our sponsorship of, or affiliation with, those people or companies.</p2>
                     <br /><br />
                     <p2>By using the Service, you are expressing your agreement to this Policy and the processing of your information and data, including your personal information, in the manner provided in this Policy.  If you do not agree to these terms, please do not use the Service.</p2>
