--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
       </div>
     </div>
 
-	<div class="container_bg"></div>
+	
 	<div id="hello">
-	    <div class="container">
+    	<div class="container_bg2"></div>
+	    <div class="container_privacy">
 	    	<div class="row">
 	    		<div class="col-lg-8 col-lg-offset-2 centered">
 	    			<h1>Amera</h1>
