--- a/eedewasa2/index.html
+++ b/eedewasa2/index.html
@@ -103,6 +103,38 @@
 
   <script src="Build/UnityLoader.js"></script>
   <script>
+  function startAudioOnClick(){
+ 
+    window.AudioContext = window.AudioContext || window.webkitAudioContext;
+    var bind = Function.bind;
+    var unbind = bind.bind(bind);
+ 
+    function instantiate(constructor, args) {
+      return new (unbind(constructor, null).apply(null, args));
+    }
+ 
+    window.AudioContext = function (AudioContext) {
+      return function () {
+        var audioContext = instantiate(AudioContext, arguments);
+        window.myAudioContext = audioContext;
+        console.log('AudioContext has been instantiated!');
+        return audioContext;
+      }
+    }(AudioContext);
+ 
+    var webAudioEnabled = false;
+ 
+    function resumeAudio(){
+      if (!webAudioEnabled && window.myAudioContext){
+        console.log('SIMMER starting Audio!');
+        window.myAudioContext.resume();
+        webAudioEnabled = true;
+      }
+    }
+ 
+    document.body.addEventListener('click', resumeAudio, true);
+    document.addEventListener('keydown', resumeAudio, true);
+  }
   var gameInstance = UnityLoader.instantiate("gameContainer", "Build/eedewasa2.json", {onProgress: UnityProgress});
   function UnityProgress(gameInstance, progress) {
     if (!gameInstance.Module) {
