--- a/eedewasa/index.html
+++ b/eedewasa/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Do you know for sure?</title>
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./PWA/manifest.json">
     <style>
       html {
         box-sizing: border-box;
