--- a/eedewasa/index.html
+++ b/eedewasa/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Do you know for sure?</title>
     <link rel="manifest" href="./PWA/manifest.json">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/PWA/images/icon-180x180.png">
     <style>
       html {
         box-sizing: border-box;
