--- a/eedewasa/index.html
+++ b/eedewasa/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Do you know for sure?</title>
-    <link rel="manifest" href="./PWA/manifest.json">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/PWA/images/icon-180x180.png">
+    <link rel="manifest" href="./manifest.json"></link>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/PWA/images/icon-180x180.png"></link>
+    <script src="./manup.js"></script>
     <style>
       html {
         box-sizing: border-box;
