--- a/eedewasa/index.html
+++ b/eedewasa/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
   <head>
-  	<script src="./SW/sw-register.js"></script>
+  	<script src="./swregister.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Do you know for sure?</title>
