--- a/eedewasa/index.html
+++ b/eedewasa/index.html
@@ -104,7 +104,7 @@
   </body>
 
 
-  <script src="swregister.js"></script>
+  <script src="SW/swregister.js"></script>
   <script src="Build/UnityLoader.js"></script>
   <script>
   var gameInstance = UnityLoader.instantiate("gameContainer", "Build/eedewasa.json", {onProgress: UnityProgress});
